--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "hmsdavis@gmail.com",
   "license": "ISC",
   "dependencies": {
-    "googleapis": "^46.0.0"
+    "googleapis": "^46.0.0",
+    "twilio": "^3.39.2"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
