--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "hmsdavis@gmail.com",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "googleapis": "^46.0.0",
     "twilio": "^3.39.2"
   },
