--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint index.js --fix",
+    "lint": "eslint index.js lambda.js --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "hmsdavis@gmail.com",
