--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -12,6 +12,8 @@ jobs:
     - uses: actions/checkout@master
     - run: npm install
     - run: mkdir artifacts
+    - run: rm index.js
+    - run: mv lambda/index.js ./
     # create zip in artifacts folder
     - run: zip -r artifacts/artifact.zip ./
     # use this premade github action for s3 sync
