--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^8.2.0",
-    "googleapis": "^46.0.0",
+    "googleapis": "^52.1.0",
     "lodash.reduce": "^4.6.0",
-    "twilio": "^3.41.1"
+    "server-destroy": "^1.0.1",
+    "twilio": "^3.48.0",
+    "open": "^7.0.4"
   },
   "devDependencies": {
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb-base": "^14.1.0",
-    "eslint-plugin-import": "^2.20.1"
+    "eslint": "^7.4.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.22.0"
   }
 }
