--- a/package.json
+++ b/package.json
@@ -7,19 +7,19 @@
     "lint": "eslint index.js lambda.js --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "hmsdavis@gmail.com",
+  "author": "steve@visda.ca",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^8.2.0",
-    "googleapis": "^52.1.0",
+    "googleapis": "^60.0.1",
     "lodash.reduce": "^4.6.0",
-    "server-destroy": "^1.0.1",
-    "twilio": "^3.48.0",
-    "open": "^7.0.4"
+    "twilio": "^3.49.4"
   },
   "devDependencies": {
-    "eslint": "^7.4.0",
+    "eslint": "^7.10.0",
     "eslint-config-airbnb-base": "^14.2.0",
-    "eslint-plugin-import": "^2.22.0"
+    "eslint-plugin-import": "^2.22.1",
+    "server-destroy": "^1.0.1",
+    "open": "^7.3.0"
   }
 }
