--- a/.github/workflows/DeployHappyBirthday.yml
+++ b/.github/workflows/DeployHappyBirthday.yml
@@ -1,4 +1,4 @@
-name: Upload App
+name: Deploy Happy Birthday to S3
 
 on:
   push:
@@ -10,13 +10,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
-    - run: npm install
+    - run: npm install --only=prod
     - run: mkdir artifacts
     - run: rm index.js
-    - run: mv lambda/index.js ./
+    - run: mv lambda/happyBirthday.js ./index.js
     - run: rm -r googleAuth.js README.md lambda .vscode .git
     # create zip in artifacts folder
-    - run: zip -r artifacts/artifact.zip ./
+    - run: zip -r artifacts/happyBirthday.zip ./
     # use this premade github action for s3 sync
     # https://github.com/jakejarvis/s3-sync-action
     - uses: jakejarvis/s3-sync-action@master
