--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "main": "index.js",
   "author": "steve@visda.ca",
   "scripts": {
-    "lint": "eslint index.js lambda.js --fix",
+    "lint": "eslint index.js lambda/*.js --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.840.0",
     "dotenv": "^8.2.0",
     "googleapis": "^60.0.1",
     "lodash.reduce": "^4.6.0",
