--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "license": "ISC",
   "dependencies": {
-    "aws-sdk": "^2.840.0",
+    "@aws-sdk/client-lambda": "^3.4.1",
     "dotenv": "^8.2.0",
     "googleapis": "^60.0.1",
     "lodash.reduce": "^4.6.0",
