--- a/.github/workflows/test-build-deploy.yml
+++ b/.github/workflows/test-build-deploy.yml
@@ -1,17 +1,15 @@
-name: Test
+name: Build, Test and Push to S3
 
 on:
   push:
-    branches: [ $default-branch ]
-  pull_request:
-    branches: [ $default-branch ]
+    branches: [ master ]
 
 jobs:
-  test:
+  build-and-test:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [12.x, 14.x]
+        node-version: [12.x, 14.x, 15.x]
     steps:
     - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
@@ -21,32 +19,9 @@ jobs:
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
-
-
-
-name: Deploy to S3
-
-on:
-  push:
-    branches: [ $default-branch ]
-
-jobs:
-  test:
+  build-and-push-s3-lambda-update:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [12.x, 14.x]
-    steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
-  deploy-s3-lambda-update:
-    runs-on: ubuntu-latest
+    needs: build-and-test
     steps:
     - uses: actions/checkout@master
     - run: mkdir artifacts
@@ -66,8 +41,9 @@ jobs:
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         AWS_REGION: 'ca-central-1'
         SOURCE_DIR: './artifacts'
-  deploy-reply:
+  build-and-push-reply:
     runs-on: ubuntu-latest
+    needs: build-and-test
     steps:
     - uses: actions/checkout@master
     - run: npm install twilio
@@ -87,8 +63,9 @@ jobs:
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         AWS_REGION: 'ca-central-1'
         SOURCE_DIR: './artifacts'
-  deploy-happy-birthday:
+  build-and-push-happy-birthday:
     runs-on: ubuntu-latest
+    needs: build-and-test
     steps:
     - uses: actions/checkout@master
     - run: npm install --only=prod
